    yet unserialized.  [ticket:1802]

  - Added internal warning in case an instance without a 
    full PK happened to be expired and then was asked
    to refresh. [ticket:1797]

- sql
  - expr.in_() now accepts a text() construct as the argument.
    Grouping parenthesis are added automatically, i.e. usage
    is like `col.in_(text("select id from table"))`.
    [ticket:1793]

  - Added table.add_is_dependent_on(othertable), allows manual
    placement of dependency rules between two Table objects
    for use within create_all(), drop_all(), sorted_tables.
    [ticket:1801]

  - Fixed bug that prevented implicit RETURNING from functioning
    properly with composite primary key that contained zeroes.
    [ticket:1778]
  
  - Fixed errant space character when generating ADD CONSTRAINT
    for a named UNIQUE constraint.

  - Fixed "table" argument on constructor of ForeginKeyConstraint
    [ticket:1571]

  - Fixed bug in connection pool cursor wrapper whereby if a
    cursor threw an exception on close(), the logging of the 
    message would fail.  [ticket:1786]

  - the _make_proxy() method of ColumnClause and Column now use
    self.__class__ to determine the class of object to be returned
    instead of hardcoding to ColumnClause/Column, making it slightly 
    easier to produce specific subclasses of these which work in 
    alias/subquery situations.

  - func.XXX() doesn't inadvertently resolve to non-Function 
    classes (e.g. fixes func.text()).  [ticket:1798]

- engines
  - Fixed building the C extensions on Python 2.4. [ticket:1781]

- mysql
  - func.sysdate() emits "SYSDATE()", i.e. with the ending
    parenthesis, on MySQL.  [ticket:1794]

- oracle
  - Added a check for cx_oracle versions lower than version 5,
    in which case the incompatible "output type handler" won't 
    be used.   This will impact decimal accuracy and some
    unicode handling issues.  [ticket:1775]

  - Fixed use_ansi=False mode, which was producing broken 